--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "class repo",
   "main": "app.js",
   "scripts": {
-    "test": "node app.js"
+    "test": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "hbs": "^4.2.0",
+    "nodemon": "^2.0.20"
   }
 }
